Fixed overflow issue

--- a/site/stylesheets/syntax.css
+++ b/site/stylesheets/syntax.css
@@ -5,7 +5,7 @@ Dark style from softwaremaniacs.org (c) Ivan Sagalaev <Maniac@SoftwareManiacs.Or
 */
 
 .hljs {
-  display: inline-block;
+  display: block;
   padding: 0.5em;
   background: #444;
 }
